iac/extras/project-configs/7/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-helloworld
  namespace: istio-poc
  labels:
    app: helloworld
    service: service-helloworld
spec:
  selector:
    app: helloworld
  ports:
    - port: 8080
      name: http
