iac/extras/project-configs/7/destination_rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-helloworld
  namespace: istio-poc
spec:
  host: service-helloworld
  subsets:
  - name: aguia
    labels:
      version: aguia
  - name: gaviao
    labels:
      version: gaviao
