iac/extras/project-configs/7/virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-helloworld
  namespace: default
spec:
  hosts:
  - "app.meudomain.com.br"
  gateways:
  - public-gateway
  http:
    - route:
      - destination:
           host: service-helloworld
           subset: aguia
        weight: 80
      - destination:
          host: service-helloworld
          subset: gaviao
        weight: 20
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - GET
          - POST
          - PATCH
          - PUT
          - DELETE
          - OPTIONS
        allowCredentials: false
        allowHeaders:
          - "*"
